<resources>
    <string name="app_name">Guide</string>
    <string name="menu_pending">Pending Tour</string>
    <string name="menu_completed">Completed Tour</string>
    <string name="menu_alerts">Alerts</string>
    <string name="menu_client">Client</string>
    <string name="menu_logout">LogOut</string>
    <string name="navigation_drawer_open">navigation_drawer_open</string>
    <string name="navigation_drawer_close">navigation_drawer_close</string>


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
