<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@mipmap/bottnav_homicon"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@mipmap/pendingturs"
            android:title="@string/menu_pending" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@mipmap/completedtursicon"
            android:title="@string/menu_completed" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@mipmap/alertsicon"
            android:title="@string/menu_alerts" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@mipmap/usericon"
                android:title="@string/menu_client" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_error_outline_black_24dp"
                android:title="@string/menu_logout" />
        </menu>
    </item>

</menu>
